# CDZ12

./: CADIZ12.sublime-workspace
config/: README.md
config/SDK/: motor2sdk.json  sdk2motor.json
config/content/: factions.json  medidores.json  spaces.json
config/content/characters/: npcs.json  protagonists.json
config/game/: fases.json  settings.json  story_elements.json  tonos.json
config/mechanics/: mechanics.json
config/world/: acts.json  time_periods.json  visibility.json
engine/m1_world_state/: Cargo.toml  Cargo.toml-bak
engine/m1_world_state/src/: error.rs  lib.rs  manager.rs  models.rs  polarization.rs  serialization.rs  visibility.rs  visibility.rs-bak
engine/m1_world_state/src/entities/: crisis.rs  faction.rs  mod.rs  space.rs
engine/m1_world_state/src/time/: context.rs  mod.rs
engine/m1_world_state/tests/integration/: m1_integration.rs  mod.rs
engine/m1_world_state/tests/unit/: crisis_entities_tests.rs  faction_entities_tests.rs  mod.rs  polarization_tests.rs  serialization_tests.rs  space_entities_tests.rs  time_tests.rs  visibility_tests.rs
engine/m2_protagonist_state/: Cargo.toml  Cargo.toml-bak
engine/m2_protagonist_state/src/: attributes.rs  error.rs  inventory.rs  lib.rs  manager.rs  medidores.rs  models.rs  models.rs-bak  objectives.rs  relationships.rs  serialization.rs  serialization.rs-bak
engine/m2_protagonist_state/tests/: attributes_tests.rs  inventory_tests.rs  (+4 more)
engine/m3_medidores/: Cargo.toml
engine/m4_event_generator/: Cargo.toml
engine/m5_jornada_director/: Cargo.toml
engine/m5_jornada_director/src/: director.rs  error.rs  lib.rs  models.rs  serialization.rs  time.rs
engine/m5_jornada_director/tests/: director_tests.rs  serialization_tests.rs  time_tests.rs
engine/m6_decision_engine/: Cargo.toml
engine/m7_narrative_generator/: Cargo.toml
engine/m7_narrative_generator/src/: chain_generator.rs  config.rs  error.rs  generator.rs  lib.rs  main.rs  models.rs  sdk_config.rs  serialization.rs  triggers.rs
engine/m7_narrative_generator/tests/: generator_tests.rs  serialization_tests.rs  triggers_tests.rs
(+39 files in other folders)
