[package]
name = "m5_jornada_director"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rmp-serde = "1.1"
thiserror = "1.0"
m1_world_state = { path = "../m1_world_state" }
m2_protagonist_state = { path = "../m2_protagonist_state" }
m4_event_generator = { path = "../m4_event_generator" }
